Правки подключения скрипта

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <main class="central">
 </main>
 
-<script type="module" src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
